# cplus-template

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: cplus_ci.yml  cpp-ci.yml
app/: CMakeLists.txt
app/include/: ExampleClass.h
app/src/: main.cpp
cmake/: Targets.cmake
cplus-template/: CMakeLists.txt
cpp-template/: CMakeLists.txt
cpp-template/src/: CMakeLists.txt  main.cpp
cpp-template/src/example/: Example.cpp  Example.hpp
cpp-template/tests/: CMakeLists.txt
cpp-template/tests/example/: CMakeLists.txt  ExampleTest.cpp
tests/: CMakeLists.txt
